--- a/portal/templates/profile_create.html
+++ b/portal/templates/profile_create.html
@@ -145,7 +145,7 @@ $(document).ready(function(){
             $("#email").attr("disabled", true);
             $("#email").removeAttr("required");
             $("#email").removeAttr("data-customemail");
-            $("#erroremail").text("");
+            setTimeout('$("#erroremail").text("");', 500);
         }
         else {
             $("#email").attr("disabled", false);
