GIL no org modal fixes - ajax updates fixes, css fixes

--- a/portal/templates/gil/base.html
+++ b/portal/templates/gil/base.html
@@ -116,7 +116,7 @@
                 <figure></figure><span>Menu</span>
             </a>
           </div>
-          <a class="logo" href="{{PORTAL}}"></a>
+          <a class="logo" href="{{PORTAL}}/"></a>
           {% if not user %}
             <div class="header__meta"><a href="#" class="menu button button--small button--white" data-toggle="modal" data-target="#modal-login">Log In</a><a href="#" class="menu button button--small button--white" data-toggle="modal" data-target="#modal-register">Join Us</a></div>
           {% endif %}
@@ -238,8 +238,8 @@
       <div class="modal-dialog" role="document">
         <div class="modal-content box-modal">
           <div class="box-modal__inner"><a class="box-modal__close" type="button" data-dismiss="modal" aria-label="Close"></a>
-            <h3 class="box-modal__title">Organizations</h3>
-            <p class="box-modal__copy">You currently do not affiliate with any organization. Please select one.</p>
+            <br/>
+            <h4 class="box-modal__copy">What is your main clinic for prostate cancer care?</h4>
             <div class="box-modal__divider"></div>
             <br/>
             <div class="form-group profile-section" id="userOrgs">
@@ -252,6 +252,8 @@
                 </div>
                 <!-- consent agreement -->
                 <button id="submit-orgs" class="button button--teal" type="button">Submit</button>
+                <br/>
+                <div id="modal-org-error" class="box-modal__copy text-danger"></div>
             </div>
           </div>
         </div>
@@ -276,26 +278,8 @@
           {% for org in consent_agreements %}
             <div id="{{org}}_consentItem" class="consent">
               <input type="hidden" id="{{org}}_agreement_url" value="{{consent_agreements[org].agreement_url}}" />
-              <input id="{{org}}_consent" class="consent-checkbox" type="checkbox"/><label id="{{org}}_consent_label" labelfor="#{{org}}_consent">Sharing data with {{consent_agreements[org].organization_name}}?</label><br/><a href="javascript:void()" style="" data-toggle="modal" data-target="#{{org}}_consentModal"><span class="glyphicon glyphicon-file" aria-hidden="true"></span>&nbsp;view agreement</a>
-              <div class="modal fade" id="{{org}}_consentModal" tabindex="-1" role="dialog" aria-labelledby="{{org}}_consentModalLabel">
-                  <div class="modal-dialog" role="document">
-                      <div class="modal-content">
-                        <div class="modal-header">
-                          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                          <h4 class="modal-title">{{ _("Sharing your data") }}</h4>
-                        </div>
-                        <div class="modal-body">
-                          <br/>
-                           {{consent_agreements[org].asset|safe}}
-                          <br/>
-                        </div>
-                        <div class="modal-footer">
-                          <button type="button" class="btn btn-default" data-dismiss="modal">{{ _("Close") }}</button>
-                        </div>
-                      </div>
-                    </div>
-                </div>
-              </div>
+              <input id="{{org}}_consent" class="consent-checkbox" type="checkbox"/>
+            </div>
           {% endfor %}
       </div>
     {% endif %}
@@ -498,17 +482,13 @@
                           };
                       }
                       else if ($.trim(d) != "") {
-                          //only draw 3 at most - otherwise the menu won't fit the screen
-                          //if (ct < 3) {
-                              if (!disabled) {
-                                  var eitem = $("#intervention_item_" + ct);
-                                  if (eitem.length == 0) { //only draw this when there isn't already one
-                                    $(".side-nav-items__item--dashboard").after('<li id="intervention_item_' + ct + '" class="side-nav-items__item side-nav-items__item--has-icon side-nav-items__item--accentuated"><a href="' + b + '" class="capitalize intervention-link">' + n + '</a></li>');
-                                    ct++;
-                                  };
+                          if (!disabled) {
+                              var eitem = $("#intervention_item_" + ct);
+                              if (eitem.length == 0) { //only draw this when there isn't already one
+                                $(".side-nav-items__item--dashboard").after('<li id="intervention_item_' + ct + '" class="side-nav-items__item side-nav-items__item--has-icon side-nav-items__item--accentuated"><a href="' + b + '" class="capitalize intervention-link">' + n + '</a></li>');
+                                ct++;
                               };
-                          //};
-
+                          };
                       };
                   });
 
@@ -540,11 +520,11 @@
           };
 
           function handleNoOrgs(userId) {
-              
-              $(".intervention-link").each(function() {
+              $(".intervention-link, a.decision-support-link").each(function() {
                 var dm = /decision\s?support/gi;
-                if (dm.test($(this).text())) {
+                if (dm.test($(this).text()) || $(this).hasClass("decision-support-link")) {
                     var hasSet = (typeof sessionStorage != "undefined") && sessionStorage.getItem("noOrgModalViewed");
+                    //allow modal to show once once action has been taken
                     if (hasSet) return false;
                     var self = this;
                     $.ajax ({
@@ -558,7 +538,10 @@
                                 var orgID = val.reference.split("/").pop();
                                 if (orgID == "0") {
                                   $(self).removeAttr("href");
-                                  $(self).on("click", function() { $("figure.js-close-nav").trigger("click"); setTimeout('$("#modal-org").modal("show");', 0); });
+                                  $(self).on("click", function() {
+                                    $("figure.js-close-nav").trigger("click");
+                                    setTimeout('$("#modal-org").modal("show");', 0);
+                                  });
                                 };
                             });
                         };
@@ -567,6 +550,22 @@
                     });
                 };
              });
+          };
+
+          function updateOrgCallback(errorMessage) {
+              if (!errorMessage) {
+                $("a.box-modal__close").trigger("click");
+                setTimeout("location.reload();", 300);
+                if (typeof sessionStorage != "undefined") {
+                  try {
+                    sessionStorage.setItem("noOrgModalViewed", "true");
+                  } catch(e) {
+
+                  };
+                };
+              } else {
+                $("#modal-org-error").html(errorMessage);
+              }
           };
 
           function showMain() {
@@ -590,37 +589,27 @@
             });
 
             {% if user %}
-              OT.getOrgs({{user.id}}, true);
+               OT.getOrgs({{user.id}});
               $("#submit-orgs").on("click", function() {
                     var os = $("#userOrgs input[name='organization']:checked");
-                    os.each(function() {
-                      if ($(this).attr("id") !== "noOrgs") {
-                        var parentOrg = $(this).attr("data-parent-id");
-                        if (!parentOrg) parentOrg = $(this).closest(".org-container[data-parent-id]").attr("data-parent-id");
-                        var agreementUrl = $("#" + parentOrg + "_agreement_url").val();
-                        //console.log('agreement: ' + agreementUrl)
-                        if (agreementUrl && agreementUrl != "") {
-                            var params = CONSENT_ENUM["consented"];
-                            params.org = parentOrg;
-                            params.agreementUrl = agreementUrl;
-                            setTimeout("OT.setConsent($('#fillOrgs').attr('userId')," + JSON.stringify(params) + ", 'all', true);", 0);
-                        };
-
-                      };
-
-                    });
-                     
                     if (os.length > 0) {
-                      OT.updateOrg({{user.id}});
-                      $("a.box-modal__close").trigger("click");
-                      setTimeout("location.reload();", 1000);
-                      if (typeof sessionStorage != "undefined") {
-                        try {
-                          sessionStorage.setItem("noOrgModalViewed", "true");
-                        } catch(e) {
+                      os.each(function() {
+                        if ($(this).attr("id") !== "noOrgs") {
+                          var parentOrg = $(this).attr("data-parent-id");
+                          if (!parentOrg) parentOrg = $(this).closest(".org-container[data-parent-id]").attr("data-parent-id");
+                          var agreementUrl = $("#" + parentOrg + "_agreement_url").val();
+                          //console.log('agreement: ' + agreementUrl)
+                          if (agreementUrl && agreementUrl != "") {
+                              var params = CONSENT_ENUM["consented"];
+                              params.org = parentOrg;
+                              params.agreementUrl = agreementUrl;
+                              setTimeout("OT.setConsent($('#fillOrgs').attr('userId')," + JSON.stringify(params) + ", 'all', true);", 0);
+                          };
 
                         };
-                      }
+
+                      });
+                      OT.updateOrg({{user.id}}, updateOrgCallback);
                     };
               });
             {% endif %}
