--- a/portal/templates/initial_queries_macros.html
+++ b/portal/templates/initial_queries_macros.html
@@ -198,7 +198,7 @@
       <hr />
       <h3 class="tnth-headline">{{ _("Your Clinic") }}</h3>
 
-      <p>{{ _("Where are you receiving your care?") }}</p>
+      <p>{{ _("What is your main clinic for prostate cancer care?") }}</p>
 
       <div class="form-group" id="userOrgs">
         <div style="margin-left: 10px">
