--- a/portal/templates/gil/index.html
+++ b/portal/templates/gil/index.html
@@ -132,7 +132,13 @@
             $("body").attr("class", "page-home");
             setSelectedNavItem($(".side-nav-items__item--home"));
             {% if init_login_modal %} $("#modal-login-register").modal("show");{%endif%}
-            if (typeof sessionStorage != "undefined") sessionStorage.clear();
+            if (typeof sessionStorage != "undefined") {
+              try {
+                sessionStorage.clear();
+              } catch(e) {
+
+              };
+            };
         });
     </script>
   {% endblock %}
