--- a/portal/templates/layout.html
+++ b/portal/templates/layout.html
@@ -131,23 +131,16 @@ _setHostName(PORTAL_NAV_PAGE);
 
 var LOGIN_AS_PATIENT = (typeof sessionStorage != "undefined") ? sessionStorage.getItem("loginAsPatient") : null;
 if (LOGIN_AS_PATIENT) {
-  $(window).bind("load", function(){ window.history.forward();});
-  $(window).bind("unload", function(){ if (navigator.userAgent.indexOf("Firefox") > 0) location.reload();});
-  $(window).bind('popstate', function(event) {
-    if ((typeof LOGIN_AS_PATIENT != "undefined") && LOGIN_AS_PATIENT) {
-        location.reload();
+  if (typeof history != 'undefined' && history.pushState) history.pushState(null, null, location.href);
+  window.addEventListener('popstate', function(event) {
+    if (typeof history != 'undefined' && history.pushState) {
+      history.pushState(null, null, location.href);
+      setTimeout('location.reload();', 0);
+    } else {
+      window.history.forward(1);
+      setTimeout('location.reload();', 0);
     };
   });
-  $(window).bind("pageshow", function(event) {
-      if (((typeof LOGIN_AS_PATIENT != "undefined") && LOGIN_AS_PATIENT) && (event.persisted || event.originalEvent.persisted)) {
-        location.reload();
-      };
-  });
-  $(window).bind('popstate', function(event) {
-      if ((typeof LOGIN_AS_PATIENT != "undefined") && LOGIN_AS_PATIENT) {
-          location.reload();
-      };
-   });
 };
 
 {% block document_ready %}
