Several minor UI text edits per LA's request.

--- a/portal/templates/gil/about.html
+++ b/portal/templates/gil/about.html
@@ -4,7 +4,7 @@
       {{ super() }}
       <div class="page-intro page-intro--dark page-intro--about" style="background-image: url({{url_for('static', filename='img/About-Top-Background.jpg') }})">
         <div class="page-intro__content">
-          <h1 class="page-intro__main">We're a collaborative program <br/>funded and created by <a href='http://www.movember.com', target='_blank'>Movember</a>.</h1>
+          <h1 class="page-intro__main">We're a collaborative program <br/>funded and created by <a href='http://www.movember.com', target='_blank'>The Movember Foundation</a>.</h1>
           <p class="page-intro__sub">Our mission is to improve the prostate cancer journey for men and their partners and caregivers, by bringing their voices together with doctors, researchers, and volunteers.</p>
           <div class="button-callout">
             <figure class="js-scroll-down" data-target=".page-intro"></figure>
