--- a/portal/templates/gil/index.html
+++ b/portal/templates/gil/index.html
@@ -92,19 +92,19 @@
             <div class="mini-boxes__item">
               <div class="mini-box">
                 <h5 class="mini-box__head">Urinary Incontinence</h5>
-                <p class="mini-box__copy">Not being able to control your urine.</p>
+                <p class="mini-box__copy">Not being able to control your urine</p>
               </div>
             </div>
             <div class="mini-boxes__item">
               <div class="mini-box">
                 <h5 class="mini-box__head">Sexual Health</h5>
-                <p class="mini-box__copy">Physical and emotional changes to your sex life and erectile function.</p>
+                <p class="mini-box__copy">Physical and emotional changes to your sex life and erectile function</p>
               </div>
             </div>
             <div class="mini-boxes__item">
               <div class="mini-box">
                 <h5 class="mini-box__head">Fatigue</h5>
-                <p class="mini-box__copy">Feeling tired due to treatment for prostate cancer.</p>
+                <p class="mini-box__copy">Feeling tired due to treatment for prostate cancer</p>
               </div>
             </div>
           </div>
