--- a/portal/templates/gil/what-is-prostate-cancer.html
+++ b/portal/templates/gil/what-is-prostate-cancer.html
@@ -5,7 +5,7 @@
       <div class="page-intro page-intro--dark page-intro--top-img page-intro--prostate-facts" style="background-image: url({{url_for('static', filename='img/PCF2-Background.jpg') }})">
         <div class="page-intro__content">
           <h1 class="page-intro__main">What is <span class="page-intro__main--accent">Prostate Cancer?</span></h1>
-          <p class="page-intro__sub">Prostate Cancer is when cancer starts in the prostate. Cancer is a disease in which cells in the body grow out of control. Many men with prostate cancer die of other causes without ever having any symptoms from the cancer.</p>
+          <p class="page-intro__sub">Cancer is a disease in which cells in the body grow out of control. Prostate Cancer is when cancer starts in the prostate. Many men with prostate cancer die of other causes without ever having any symptoms from the cancer.</p>
         </div>
       </div>
       <div class="module-wrap module-wrap--theme-gray">
