code fixes in updating organization in GIL modal

--- a/portal/static/less/gil.less
+++ b/portal/static/less/gil.less
@@ -7147,6 +7147,9 @@ a.home--modal-link {
 .tnth-hide {
     display: none;
 }
+#consentContainer {
+    visibility: invisible;
+}
 
 @media (min-width: 1200px) {
     .home--item-container {
